--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ serde_json = "1.0"
 camino = "1.1"
 zip = { version = "0.6", default-features = false, features = ["deflate"] }
 clap = { version = "4.5", features = ["derive"] }
+walkdir = "2.3"
