--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -36,6 +36,17 @@
 			],
 			"isBackground": false,
 			"group": "build"
+		},
+		{
+			"label": "cargo test",
+			"type": "shell",
+			"command": "cargo",
+			"args": [
+				"test",
+				"--all-features"
+			],
+			"isBackground": false,
+			"group": "build"
 		}
 	]
 }
