--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ walkdir = "2.3"
 
 [features]
 # Optional GUI visualization using egui/eframe
-egui = ["dep:eframe", "dep:egui", "dep:egui-phosphor"]
+highlight = ["dep:syntect", "dep:once_cell"]
+egui = ["dep:eframe", "dep:egui", "dep:egui-phosphor", "dep:syntect", "dep:once_cell"]
 
 [dependencies.egui-phosphor]
 version = "0.10"
@@ -30,3 +31,11 @@ version = "0.32"
 optional = true
 default-features = true
 features = ["wgpu"]
+
+[dependencies.syntect]
+version = "4.6"
+optional = true
+
+[dependencies.once_cell]
+version = "1.20"
+optional = true
