Cargo: Fix missing fields

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "rustylink"
 version = "1.0.0"
 edition = "2024"
+description = "Visualize & analyze Simulink .slx files"
+license = "Apache-2.0"
 
 [dependencies]
 anyhow = "1.0"
