--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -47,6 +47,50 @@
 			],
 			"isBackground": false,
 			"group": "build"
+		},
+		{
+			"label": "cargo check all",
+			"type": "shell",
+			"command": "cargo",
+			"args": [
+				"check",
+				"--all-features"
+			],
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "cargo test",
+			"type": "shell",
+			"command": "cargo",
+			"args": [
+				"test",
+				"--all-features"
+			],
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "cargo check all 2",
+			"type": "shell",
+			"command": "cargo",
+			"args": [
+				"check",
+				"--all-features"
+			],
+			"isBackground": false,
+			"group": "build"
+		},
+		{
+			"label": "cargo test (post-change)",
+			"type": "shell",
+			"command": "cargo",
+			"args": [
+				"test",
+				"--all-features"
+			],
+			"isBackground": false,
+			"group": "build"
 		}
 	]
 }
