--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ zip = { version = "0.6", default-features = false, features = ["deflate"] }
 clap = { version = "4.5", features = ["derive"] }
 walkdir = "2.3"
 rayon = "1.11"
+html-escape = "0.2"
 
 [features]
 # Optional GUI visualization using egui/eframe
