--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ clap = { version = "4.5", features = ["derive"] }
 walkdir = "2.3"
 rayon = "1.11"
 html-escape = "0.2"
+quick-xml = "0.38"
 
 [features]
 # Optional GUI visualization using egui/eframe
