--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ walkdir = "2.3"
 rayon = "1.11"
 html-escape = "0.2"
 quick-xml = "0.38"
+bincode = { version = "2.0.1", features = ["serde"] }
 
 [features]
 # Optional GUI visualization using egui/eframe
