Remove dependency on egui_phosphot: Use egui embedded icons

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,13 +24,9 @@ bincode = { version = "2.0.1", features = ["serde"] }
 [features]
 # Optional GUI visualization using egui/eframe
 highlight = ["dep:syntect", "dep:once_cell"]
-egui = ["dep:eframe", "dep:egui", "dep:egui-phosphor", "dep:syntect", "dep:once_cell"]
+egui = ["dep:eframe", "dep:egui", "dep:syntect", "dep:once_cell"]
 ## Optional mask evaluation (parses very small subset of MATLAB mask scripts to show display text)
 mask = []
-
-[dependencies.egui-phosphor]
-version = "0.10"
-optional = true
 
 [dependencies.egui]
 version = "0.32"
